--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <div class="container">
         <div class="destination-container">
             <div class="destination" id="belize">
-                <h2>Belize</h2>
+                <h2>madrid</h2>
             </div>
 
             <div class="destination" id="barcelona">
-                <h2>Barcelona</h2>
+                <h2>rome</h2>
             </div>
         </div>
     </div>
